vlib/v/checker/tests/array_filter_fn_err.out
vlib/v/checker/tests/array_filter_fn_err.vv:2:28: error: function needs exactly 1 argument
    1 | fn main() {
    2 |     a1 := [1, 2, 3, 4].filter(fn (a int, b int) bool {
      |                               ~~~~~~~~~~~~~~~~~~~~~~~~
    3 |         return a > 0
    4 |     })
vlib/v/checker/tests/array_filter_fn_err.vv:7:28: error: type mismatch, should use `fn(a int) bool {...}`
    5 |     println(a1)
    6 | 
    7 |     a2 := [1, 2, 3, 4].filter(fn (a string) bool {
      |                               ~~~~~~~~~~~~~~~~~~~~
    8 |         return a.len > 0
    9 |     })
vlib/v/checker/tests/array_filter_fn_err.vv:12:21: error: function needs exactly 1 argument
   10 |     println(a2)
   11 | 
   12 |     a3 := [1, 2, 3, 4].filter(fil1)
      |                        ~~~~~~~~~~~~
   13 |     println(a3)
   14 |
vlib/v/checker/tests/array_filter_fn_err.vv:15:28: error: type mismatch, should use `fn(a int) bool {...}`
   13 |     println(a3)
   14 | 
   15 |     a4 := [1, 2, 3, 4].filter(fil2)
      |                               ~~~~
   16 |     println(a4)
   17 | }
